...
      android:textSize="19sp"
      tools:text="Add new score to track:"
      />

  <!-- TODO: extract strings-->
  <EditText
      android:id="@+id/title_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="12dp"
      android:backgroundTint="@android:color/white"
...
      android:textColor="@color/colorBottomSheetSecondaryText"
      tools:text="Priority:"
      />

  <!-- TODO: load elements dynamically -->
  <LinearLayout
      android:id="@+id/priority_holder"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:gravity="center"
...
