<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >

  <android.support.v7.widget.RecyclerView
      android:id="@+id/main_list"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/main_starter_fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="16dp"
      android:src="@drawable/ic_add"
      app:fabSize="normal"
      app:layout_anchor="@+id/bottom_sheet_frame"
      app:layout_anchorGravity="right|top"
      />

  <FrameLayout
      android:id="@id/bottom_sheet_frame"
      android:layout_width="match_parent"
      android:layout_height="197dp"
      android:background="@color/colorPrimaryListText"
      app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
      >
  </FrameLayout>


</android.support.design.widget.CoordinatorLayout>
