<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    >

  <ImageView
      android:id="@+id/icon"
      android:layout_width="19dp"
      android:layout_height="19dp"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:src="@drawable/ic_chat"
      android:tint="@android:color/white"
      />

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/icon"
      android:layout_marginStart="36dp"
      android:layout_toEndOf="@+id/icon"
      tools:text="Today"
      />

  <TextView
      android:id="@+id/count"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      tools:text="6"
      />

</RelativeLayout>